Fix #116031: EEVEE-Next: Nishita sky does not work

Add missing sky texture binding to the new draw manager.